# collab-dev

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml
src/collab_dev/: app.py  collect.py  theme.py
src/collab_dev/components/charts/: __init__.py  chart.html  chart_renderer.py  metric.html  utils.py
src/collab_dev/components/charts/approval_time/: __init__.py  data.py  template.html
src/collab_dev/components/charts/bot_analysis/: __init__.py  data.py  template.html
src/collab_dev/components/charts/contribution/: __init__.py  data.py  template.html
src/collab_dev/components/charts/merge_time/: __init__.py  data.py  template.html
src/collab_dev/components/charts/pr_merge_time/: __init__.py  template.html
src/collab_dev/components/charts/pr_sankey/: __init__.py  data.py  template.html
src/collab_dev/components/charts/review_coverage/: __init__.py  data.py  template.html
src/collab_dev/components/charts/review_funnel/: __init__.py  data.py  template.html
src/collab_dev/components/charts/review_turnaround/: __init__.py  data.py  template.html
src/collab_dev/components/charts/workflow/: __init__.py  template.html
src/collab_dev/fetcher/: api_client.py  fetch.py  github_utils.py  store.py
src/collab_dev/loader/: load.py
src/collab_dev/static/: app.css
src/collab_dev/templates/: index.html  repository.html
